# kali-scheme

./: .arch-inventory  .gdbinit  .hgempty  .hgignore  .hgtags  COPYING  COPYING.rtf  INSTALL  KALI.README  Makefile  Makefile.in  NEWS  README  TODO  WINDOWS.txt  acconfig.h  alt-packages.scm  autogen.sh  build-usual-image  comp-packages.scm  configure  configure.in  debug-packages.scm  dynload.c  error.c  extension.c  filenames.make  filenames.scm  fzz.c  initial-packages.scm  initial.debug  initial.image  initial.scm  interfaces.scm  link-packages.scm  low-packages.scm  main.c  more-interfaces.scm  more-packages.scm  more-signatures.scm  (+17 more)
=attic/: configure.in
=notes/: fixing-the-ffi.txt
Makefiles/: =README  dotx-rules.mk
PLUGIN/: REQ
alt/: all-prims.scm  annotate.scm  ascii.scm  bitwise-tests.scm  bitwise.scm  closure.scm  code-vector.scm  config.scm  contin.scm  environments.scm  escape.scm  features.scm  file-name.scm  flatload.scm  fluid.scm  init-defpackage.scm  locations.scm  loophole.scm  low-packages.scm  low.scm  packages.scm  primitives.scm  pseudoscheme-features.scm  pseudoscheme-record.scm  queue.scm  record.scm  reroot.scm  reroot1.scm  scheme48-features.scm  schemetoc-features.scm  schemetoc-record.scm  silly.scm  syntax.scm  t-features.scm  t-record.scm  table.scm  template.scm  values.scm  weak.scm
bcomp/: comp.scm  config.scm  cprim.scm  ctop.scm  ddata.scm  defpackage.scm  for-reify.scm  interface.scm  location.scm  module-language.scm  mtype.scm  package.scm  recon.scm  rules.scm  scan.scm  schemify.scm  segment.scm  signature.scm  state.scm  structure.scm  syntax.scm  type.scm  undefined.scm  usual.scm
bench/: Makefile  bench  generate-html-from-all-results.scm  summarize  table
big/: array.scm  big-util.scm  bigbit.scm  compose-cont.scm  defrecord.scm  destructure.scm  dump.scm  external.scm  filename.scm  floatnum.scm  format.scm  general-table.scm  hilbert.scm  lu-decomp.scm  new-ports.scm  pp.scm  queue.scm  random.scm  receive.scm  rk-util.scm  search-tree.scm  sleep.scm  thread.scm  xport.scm
c/: asm-glue.c  bignum.c  bignum.h  bignumint.h  c-mods.h  double_to_string.c  dynamo-test.c  dynamo.c  event.h  extension.c  external-init.c  external-lib.c  external.c  fd-io.h  fp.h  free.c  init.c  io.h  kali.h  main.c  prescheme.h  scheme48-external.exp  scheme48.h  scheme48.h.in  scheme48arch.h.in  scheme48heap.c  scheme48heap.h  scheme48image.h  scheme48read-image.c  scheme48vm-prelude.h  scheme48vm.c  scheme48vm.h  scheme48write-barrier-bibop.h  scheme48write-barrier-twospace.h  scheme48write-barrier.h  scheme48write-barrier.h.in  scheme48write-image.c  script-interpreter.c  socket.h  srfi-27.c  (+3 more)
debug/: byte-code-test.scm  check.scm  describe.scm  fact.scm  fix-low.scm  for-debugging.scm  level-0.scm  link-debug.scm  linker.scm  mini-command.scm  mini-eval.scm  mini-package.scm  mini-start.scm  mumble-packages.scm  mutation.scm  packages-for-debugging.scm  profile.scm  read-image.scm  run.scm  show-types.scm  space.scm  spatial-hack.scm  test-generic.scm  test-methods.scm  test.scm  tiny-packages.scm  tiny.scm  vector-space.scm  wind-test.scm
doc/: big-scheme.txt  call-back.txt  external.ps  external.txt  folding.txt  func-regexp.txt  hacking.txt  install.txt  io.txt  kali.html  kali.ps  kali.txt  latex-stuff.tex  lsc.ps  manual.ps  meeting.ps  meeting.tex  module.ps  module.tex  news.txt  no-leaf-env.txt  package.txt  release.txt  scheme48.man  summary.tex  threads.txt  todo.txt  tractable.ps  type.txt  user-guide.txt  utilities.ps
emacs/: README  cmulisp.el  cmuscheme.el  cmuscheme48.el  cmushell.el  comint.el  jar-hacks.el
env/: assem.scm  basic-command.scm  build.scm  command.scm  config.scm  debug.scm  debuginfo.scm  defpackage.scm  disasm.scm  disclosers.scm  dispcond.scm  find.scm  flatload.scm  init-defpackage.scm  inspect.scm  jar-assem.scm  list-interface.scm  load-package.scm  more-thread.scm  pacman.scm  pedit.scm  read-command.scm  shadow.scm  space.scm  start.scm  traverse.scm  version-info.scm
infix/: packages.scm  pratt.scm  sgol-runtime.scm  sgol.scm  tokenize.scm
libprescheme/: Makefile.in  fd-io.c  io.c  io.h  misc.c  prescheme.h
libscheme48/: Makefile.in  asm-glue.c  bignum.c  bignum.h  boxing.c  boxing.h  event.h  exceptions.c  exceptions.h  extension.c  external.c  external.h  ffi48.c  ffi48.h  free.c  globals.c  globals.h  kali.h  locals.c  locals.h  records.c  records.h  scheme48.h  scheme48.h.in  scheme48vm-prelude.h  scheme48vm.h  srfi-27.c  stobs.c  stobs.h  utils.c  utils.h
libscheme48-posix/: Makefile.in  dir.c  dynamo.c  environ.h  event.c  io.c  posix.h  proc-env.c  proc.c  regexp.c  socket.c  sys-select.h  sysdep.h  sysdep.h.in  sysexits.c  user.c
link/: data.scm  generate-c-header.scm  link.scm  load-linker.exec  loadc.scm  lucid-script.lisp  reify.scm  transport.scm  write-image.scm
misc/: amb.scm  annotate.scm  argument.scm  cig.scm  config.scm  doodl.scm  either.scm  getenv.scm  hilbert.scm  ilength.scm  integertostring.scm  load-static.scm  mail.scm  packages.scm  psd-s48.scm  remote.scm  require.scm  separate.scm  shift-reset.scm  sicp.scm  slib-init.scm  socket.scm  static.scm  test-doodl.scm
opt/: alpha.scm  analyze.scm  expand.scm  inline.scm  node.scm  schemify.scm  tst.scm
ps-compiler/: Makefile.in  compile-bibop-gc-32.scm  compile-bibop-gc-64.scm  compile-bibop-gc.scm  compile-gc.scm  compile-twospace-gc-32.scm  compile-twospace-gc-64.scm  compile-twospace-gc.scm  compile-vm-no-gc-32.scm  compile-vm-no-gc-64.scm  compile-vm-no-gc.scm  compile-vm.scm  interfaces.scm  load-ps-compiler.scm  load-scheme.scm  minor-version-number  package-defs.scm  param.scm
rts/: arch.scm  base.scm  bignum.scm  bummed-jar-defrecord.scm  condition.scm  continuation.scm  defenum.scm  enum.scm  env.scm  eval.scm  exception.scm  filename.scm  floatnum.scm  fluid.scm  generic.scm  init.scm  innum.scm  interrupt.scm  jar-defrecord.scm  lize.scm  low.scm  method.scm  number.scm  numio.scm  population.scm  port.scm  ratnum.scm  read.scm  recnum.scm  record.scm  shadow.scm  signal.scm  table.scm  template.scm  (+5 more)
(+1001 files in other folders)
